tests/regression/error/hw4_error08.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_BINARY {lft=EXP_NONE,opr=BOP_LT,rht=EXP_NUM 3}}]}
  : program
;
